--- a/courses/macroeconomics/macro_2/index.html
+++ b/courses/macroeconomics/macro_2/index.html
@@ -1040,7 +1040,7 @@ Comme le taux d&rsquo;intérêt augmente avec l&rsquo;activité économique, un 
 </li>
 </ul>
 <h2 id="examen-cc-1">Examen CC-1</h2>
-<p><a href="/uploads/Examen_CC1-2024.pdf">Épreuve CC-1</a></p>
+<p><a href="/files/Examen_CC1-2024.pdf">Épreuve CC-1</a></p>
 
           </div>
 
