--- a/courses/international_trade/heckscher-ohlin-empirics/index.html
+++ b/courses/international_trade/heckscher-ohlin-empirics/index.html
@@ -958,7 +958,7 @@ It challenged the validity of the Heckscher-Ohlin model and sparked significant 
   </div></figure>
 </p>
 <p>Other tests have nuanced the positions.
-Robert Baldwin re-examined the data for 1961 and revealed again that capital-intensive goods are more likely to be exported than imported.
+Robert Baldwin re-examined the data for 1961 and revealed again that capital-intensive goods are more likely to be imported than exported.
 However, exports used more educated labor than imports, and also employed more engineers.
 In that sense, export were more skill-intensive, and the US is abundant in skilled labor.</p>
 <p>
@@ -1015,7 +1015,7 @@ Removing restrictive assumptions increases the performance of the model, as show
 The prediction also holds for other factors, in particular, high-skilled and low-skilled workers.
 In economics, we call high-skilled workers those who have accumulated multiple years of education, typically obtaining a college degree.</p>
 <p>According to the Stolper-Samuelson theorem, a country that has a relative abundance of high-skilled workers (like the USA) should export high-skilled labor-intensive and, thus, the <strong>the wage of high-skilled workers should rise</strong>.
-This means that high-skilled workers in the USA should benefit from trade and globaization.
+This means that high-skilled workers in the USA should benefit from trade and globalization.
 Moreover, because low-skilled workers see their wages decrease, they should <strong>oppose</strong> to trade and ask the government to put in place tariffs and other protectionist measures.</p>
 <p>The data shows that this seems to be the case.
 
@@ -1042,7 +1042,7 @@ Moreover, because low-skilled workers see their wages decrease, they should <str
 <p>In this graph, the average GDP per capita approximates the relative abundance of high-skilled workers: countries with high GDP per capita have more high-skilled workers.
 For each country, the authors study the relationship between the education of an individual and whether he is pro-trade.
 For instance, a highly-skilled person in Bangladesh should <em>not</em> be pro-trade, because Bangladesh has abundance of low-skilled workers.
-In contrast, a Norweigian with a college degree should be pro-trade, because Norway has abundance of high-skilled workers.
+In contrast, a Norwegian with a college degree should be pro-trade, because Norway has abundance of high-skilled workers.
 The plot confirms the prediction of the model.</p>
 
           </div>
