Error in function and figures

--- a/courses/macroeconomics/olg/olg_savings_function/index.html
+++ b/courses/macroeconomics/olg/olg_savings_function/index.html
@@ -990,7 +990,7 @@ When the inter-temporal elasticity of substitution is equal to 1 (log-utility), 
 <p>$$s(w,R) = \frac{1}{1+\beta^{-\sigma}R^{1-\sigma}}w,$$</p>
 <p>and
 $$s^{\prime}_w  =\frac{1}{1+\beta^{-\sigma}R^{1-\sigma}} &gt; 0.$$</p>
-<p>However, $s^{\prime}_{R} = - \frac{w R^{-\sigma}}{\left(1+\beta^{-\sigma}R^{1-\sigma}\right)^{2}}(1-\sigma)\gtreqqless 0$ depending on $\sigma \lesseqqgtr 1.$</p>
+<p>However, $s^{\prime}_{R} = - \frac{w \beta^{-\sigma} R^{-\sigma}}{\left(1+\beta^{-\sigma}R^{1-\sigma}\right)^{2}}(1-\sigma)\gtreqqless 0$ depending on $\sigma \lesseqqgtr 1.$</p>
 <p><strong>Log-utility:</strong></p>
 <p>In the case of logarithmic utility, savings are independent of the interest rate $R$ and are linear in wages.
 Log-utility is a special case of the CIES function when $\sigma=1.$
