--- a/courses/macroeconomics/olg/olg_steady_state/index.html
+++ b/courses/macroeconomics/olg/olg_steady_state/index.html
@@ -974,7 +974,7 @@ There can be two additional, positive steady states depending on the curvature o
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="/img/olg/example_1.png" alt="steady states" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/olg/example_1.webp" alt="steady states" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <p>Similarly, the Cobb-Douglas case $\rho \rightarrow 0$ also has zero as a steady state.
@@ -1001,7 +1001,7 @@ Moreover, the configuration varies depending on the production and utility funct
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="/img/olg/example_2.png" alt="behaviour" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/olg/example_2.webp" alt="behaviour" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <h2 id="stability-of-the-steady-state">Stability of the steady state</h2>
@@ -1093,7 +1093,7 @@ We show that the dynamics are bounded above by the steady state $\bar{k} = \phi^
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="/img/olg/Log_CD.png" alt="log_cd" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/olg/Log_CD.webp" alt="log_cd" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <h3 id="log-utility-and-ces-technology">Log-utility and CES technology</h3>
@@ -1130,7 +1130,7 @@ In that case, the economy displays a unique steady state, and it is globally sta
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="/img/olg/ces0.png" alt="ces0" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/olg/ces0.webp" alt="ces0" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <h4 id="unique-bark0-or-multiple-steady-states">Unique $\bar{k}=0$ or multiple steady states</h4>
@@ -1181,7 +1181,7 @@ The steady state with $\bar{k}=0$ is a <strong>poverty trap</strong>: whenever t
 
 <figure  >
   <div class="d-flex justify-content-center">
-    <div class="w-100" ><img src="/img/olg/ces1.png" alt="ces1" loading="lazy" data-zoomable /></div>
+    <div class="w-100" ><img src="/img/olg/ces1.webp" alt="ces1" loading="lazy" data-zoomable /></div>
   </div></figure>
 </p>
 <h2 id="solved-example">Solved example</h2>
