--- a/publication/epidemiological/index.html
+++ b/publication/epidemiological/index.html
@@ -940,6 +940,20 @@
   <a class="btn btn-outline-primary btn-page-header" href="https://docs.iza.org/dp17356.pdf" target="_blank" rel="noopener">
     IZA Working Paper</a>
 
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header" href="https://www.parisschoolofeconomics.eu/actualites/nouveau-policy-brief-sur-lapproche-epidemiologique-du-developpement-comparatif/" target="_blank" rel="noopener">
+    PSE Policy Brief</a>
+
 
 </div>
 
