--- a/courses/international_trade/export_subsidies/index.html
+++ b/courses/international_trade/export_subsidies/index.html
@@ -920,7 +920,7 @@
 As with tariffs, export subsidies can be <em>ad-valorem</em> or specific, although this distinction is not important in the analysis.
 First, we shall note that, differently from before, in this case we shall assume that Home exports a good, this is, the autarky price at Home is <strong>lower</strong> than the international price.</p>
 <h3 id="effects-of-an-export-subsidy">Effects of an export subsidy</h3>
-<p>When a countri subsidizes its exports, the domestic price of the product increases.
+<p>When a country subsidizes its exports, the domestic price of the product increases.
 This is because now, a local producer can sell it a Home at the world price $p^w$, or ship it abroad and gain the world price plus the subsidy: $p^w + s$.
 At the same time, the subsidy encourages more local produces to start producing, world supply for the good increases and the world price goes down (here we just focus on the case where the country is large enough to meaningfuly affect world supply).
 Thus, as with the tariff, the change in prices implied by the subsidy is shared between consumers at Home, who pay a higher price, and consumers abroad who enjoy a lower price; firms earn the subsidy and the government has to pay for it.
