--- a/teaching/macroeconomics_l3/references.html
+++ b/teaching/macroeconomics_l3/references.html
@@ -231,8 +231,28 @@ div.csl-indent {
 </header>
 
 
-
-
+<div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
+<div id="ref-Acemoglu_2016" class="csl-entry" role="listitem">
+Acemoglu, Daron, David Laibson, and John A List. 2016.
+<em>Macroéconomie</em>. Erpi.
+</div>
+<div id="ref-Barro_2003" class="csl-entry" role="listitem">
+Barro, Robert J, and Xavier I Sala-i-Martin. 2003. <em>Economic
+Growth</em>. 2nd ed. The MIT Press. London, England: MIT Press.
+</div>
+<div id="ref-Campante_2021" class="csl-entry" role="listitem">
+Campante, Filipe, Federico Sturzenegger, and Andrés Velasco. 2021.
+<em>Advanced Macroeconomics: An Easy Guide</em>. LSE Press. <a href="https://doi.org/10.31389/lsepress.ame">https://doi.org/10.31389/lsepress.ame</a>.
+</div>
+<div id="ref-Romer_2018" class="csl-entry" role="listitem">
+ROMER. 2018. <em>Advanced Macroeconomics</em>. 5th ed. Columbus, OH:
+McGraw-Hill Education.
+</div>
+<div id="ref-Weil_2016" class="csl-entry" role="listitem">
+Weil, David. 2016. <em>Economic Growth</em>. 3rd ed. London, England:
+Routledge.
+</div>
+</div>
 
 
 
