Improve Macro Dynamique

--- a/teaching/macroeconomics_l3/index.html
+++ b/teaching/macroeconomics_l3/index.html
@@ -330,7 +330,7 @@ div.csl-indent {
 <section id="manuel-principal" class="level3" data-number="1.5.1">
 <h3 data-number="1.5.1" class="anchored" data-anchor-id="manuel-principal"><span class="header-section-number">1.5.1</span> Manuel principal</h3>
 <ul>
-<li><span class="citation" data-cites="Romer_2018">ROMER (<a href="references.html#ref-Romer_2018" role="doc-biblioref">2018</a>)</span></li>
+<li><span class="citation" data-cites="Romer_2018">Romer (<a href="references.html#ref-Romer_2018" role="doc-biblioref">2018</a>)</span></li>
 </ul>
 </section>
 <section id="manuels-complémentaires" class="level3" data-number="1.5.2">
@@ -367,7 +367,7 @@ Barro, Robert J, and Xavier I Sala-i-Martin. 2003. <em>Economic Growth</em>. 2nd
 Campante, Filipe, Federico Sturzenegger, and Andrés Velasco. 2021. <em>Advanced Macroeconomics: An Easy Guide</em>. LSE Press. <a href="https://doi.org/10.31389/lsepress.ame">https://doi.org/10.31389/lsepress.ame</a>.
 </div>
 <div id="ref-Romer_2018" class="csl-entry" role="listitem">
-ROMER. 2018. <em>Advanced Macroeconomics</em>. 5th ed. Columbus, OH: McGraw-Hill Education.
+Romer, David. 2018. <em>Advanced Macroeconomics</em>. 5th ed. Columbus, OH: McGraw-Hill Education.
 </div>
 <div id="ref-Weil_2016" class="csl-entry" role="listitem">
 Weil, David. 2016. <em>Economic Growth</em>. 3rd ed. London, England: Routledge.
